Implementado Logger. Añadido plugin Surefire.