@@ -98,16 +98,6 @@
 			<version>1.1.0.Final</version>
 		</dependency>
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>1.7.22</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.22</version>
-		</dependency>
-		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
 			<version>5.2.4.Final</version>
@@ -195,6 +185,21 @@
 		    <artifactId>jackson-core</artifactId>
 		    <version>2.5.2</version>
 		</dependency>
+		<dependency>
+		  <groupId>log4j</groupId>
+		  <artifactId>log4j</artifactId>
+		  <version>1.2.17</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.25</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.25</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -257,6 +262,19 @@
 					<configuration>
 						<set_default>true</set_default>
 					</configuration>
+				</plugin>
+				<plugin>
+				    <groupId>org.apache.maven.plugins</groupId>
+				    <artifactId>maven-surefire-plugin</artifactId>
+				    <version>2.20</version>
+				    <configuration>
+				        <junitArtifactName>junit:junit</junitArtifactName>
+				        <encoding>UTF-8</encoding>
+				        <inputEncoding>UTF-8</inputEncoding>
+				        <outputEncoding>UTF-8</outputEncoding>
+				        <argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m -ea
+				        -Dfile.encoding=UTF-8</argLine>
+				    </configuration>
 				</plugin>
 			</plugins>
 		</pluginManagement>
